--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ ext {
     rxbinding = "2.1.1"
     rxbus = "1.0.2"
     rxrelay = "2.0.0"
-    rxpermissions = "0.10.2"
+    permissions = "2.0.0-rc11"
 
     // http
     retrofitVersion = "2.4.0"
