--- a/lib.ble/build.gradle
+++ b/lib.ble/build.gradle
@@ -44,7 +44,10 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:$rootProject.rxjava"
     implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroid"
 
-    // rxpermission
-    implementation "com.github.tbruyelle:rxpermissions:$rootProject.rxpermissions"
+    // permission
+    implementation "com.yanzhenjie:permission:$rootProject.permissions"
+    implementation group: 'com.jcraft', name: 'jzlib', version: '1.1.3'
+    compile group: 'fr.univ-valenciennes', name: 'bzip2', version: '1.0'
+    //implementation group: 'org.itadaki', name: 'bzip2', version: '0.9.1'
 
 }
