--- a/lib.ble/build.gradle
+++ b/lib.ble/build.gradle
@@ -14,7 +14,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-        //multiDexEnabled true
+        multiDexEnabled true
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -47,7 +47,6 @@ dependencies {
     // permission
     implementation "com.yanzhenjie:permission:$rootProject.permissions"
     implementation group: 'com.jcraft', name: 'jzlib', version: '1.1.3'
-    compile group: 'fr.univ-valenciennes', name: 'bzip2', version: '1.0'
-    //implementation group: 'org.itadaki', name: 'bzip2', version: '0.9.1'
+    implementation group: 'fr.univ-valenciennes', name: 'bzip2', version: '1.0'
 
 }
