optimize peripheral expandability。

--- a/app.peripheral/src/main/AndroidManifest.xml
+++ b/app.peripheral/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <service
+            android:name="com.suhen.android.appperipheral.service.SimplePeripheralService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
     </application>
 
 </manifest>
