--- a/lib.ble/build.gradle
+++ b/lib.ble/build.gradle
@@ -39,14 +39,6 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
 
     implementation group: 'net.vidageek', name: 'mirror', version: "$rootProject.mirror"
-
-    // rx
-    implementation "io.reactivex.rxjava2:rxjava:$rootProject.rxjava"
-    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroid"
-
-    // permission
-    implementation "com.yanzhenjie:permission:$rootProject.permissions"
-    implementation group: 'com.jcraft', name: 'jzlib', version: '1.1.3'
-    implementation group: 'fr.univ-valenciennes', name: 'bzip2', version: '1.0'
+    implementation "com.clj.fastble:FastBleLib:$rootProject.FastBleLib"
 
 }
