--- a/app.central/src/main/AndroidManifest.xml
+++ b/app.central/src/main/AndroidManifest.xml
@@ -9,13 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.suhen.android.appcentral.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <service
+            android:name="com.suhen.android.appcentral.service.SimpleBleCentralService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
     </application>
 
 </manifest>
