--- a/app.peripheral/src/main/AndroidManifest.xml
+++ b/app.peripheral/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.suhen.android.appperipheral.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <service
-            android:name="com.suhen.android.appperipheral.service.SimplePeripheralService"
+            android:name="com.suhen.android.appperipheral.service.SimpleBlePeripheralService"
             android:enabled="true"
             android:exported="true">
         </service>
