read write pass tested

--- a/lib.ble/build.gradle
+++ b/lib.ble/build.gradle
@@ -42,5 +42,8 @@ dependencies {
     api "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
 
     api "com.yanzhenjie:permission:$rootProject.permissions"
+    api "com.jcraft:jzlib:$rootProject.jzlib"
+    api "org.apache.commons:commons-compress:1.18"
+
 
 }
