--- a/AndroidCommon/module_common.gradle
+++ b/AndroidCommon/module_common.gradle
@@ -1,5 +1,5 @@
 /**
- * File: 'android_module_common.gradle'
+ * File: 'module_common.gradle'
  * All android projects can copy and include this file.
  */
 
