--- a/app.ble.peripheral/build.gradle
+++ b/app.ble.peripheral/build.gradle
@@ -3,10 +3,11 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
 }
+apply from: "${rootDir}/module_plugin.gradle"
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion versions.compileSdk
+    buildToolsVersion versions.buildTools
 
     defaultConfig {
         applicationId "com.android.cooper.app.miottvdemo"
@@ -17,48 +18,31 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    signingConfigs {
-        release {
-            File strFile = new File("xiaomi.keystore")
-            storeFile file(strFile)
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
-            storePassword 'android'
-            v1SigningEnabled true
-            v2SigningEnabled true
-        }
-    }
 
     buildTypes {
         release {
             minifyEnabled false
-            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-        debug {
-            minifyEnabled false
-            signingConfig signingConfigs.release
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
     }
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation deps.test.core
+    testImplementation deps.test.coreKtx
+    testImplementation deps.test.junit
+    testImplementation deps.test.junitKtx
+    androidTestImplementation deps.test.core
+    androidTestImplementation deps.test.coreKtx
+    androidTestImplementation deps.test.junit
+    androidTestImplementation deps.test.junitKtx
+    androidTestImplementation deps.test.espressoCore
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation deps.kotlin.stdlib
+    implementation deps.support.core
+    implementation deps.support.appcompat
+    implementation deps.support.design
+    implementation deps.support.constraintLayout
 
     implementation project(':AndroidCommon')
     implementation project(':lib.ble.common')
