--- a/app.ble.peripheral/build.gradle
+++ b/app.ble.peripheral/build.gradle
@@ -18,11 +18,27 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        release {
+            File strFile = new File("../../mrom.keystore")
+            storeFile file(strFile)
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storePassword 'android'
+            v1SigningEnabled true
+            v2SigningEnabled true
+        }
+    }
 
     buildTypes {
         release {
             minifyEnabled false
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false
+            signingConfig signingConfigs.release
         }
     }
 }
