--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,13 @@ buildscript {
     }
     apply from: "${androidProjectCommon}"
 
-    ext.kotlin_version = "1.4.20"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -32,6 +31,5 @@ task clean(type: Delete) {
 }
 
 ext {
-    permissions = "2.0.3"
     jzlib = "1.1.3"
 }
